# future-fn

./: Cargo.toml  README.md  readme.md
sh/: init.sh
src/: cfg.rs  lib.rs  macro.rs  test.rs
tests/: mod.rs
tests/future/: fn.rs
