[package]
name = "async-func"
version = "0.1.2"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """A Rust library providing macros to simplify the creation of asynchronous closures with external state captured by move. Useful for structuring asynchronous code with ease and clarity."""
keywords = ["standard", "macro", "extensions", "structures", "simplifying"]
repository = "https://github.com/ltpp-universe/async-func"
categories = ["data-structures", "development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "abort"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "abort"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"