[package]
name = "async-func"
version = "0.2.3"
edition = "2024"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """A Rust library providing macros to simplify the creation of asynchronous closures with external state captured by move. Useful for structuring asynchronous code with ease and clarity."""
keywords = ["standard", "macro", "extensions", "structures", "simplifying"]
repository = "https://github.com/ltpp-universe/async-func"
categories = ["data-structures", "development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
